--- a/src/partials/fundraising.html
+++ b/src/partials/fundraising.html
@@ -10,7 +10,7 @@
     <button class="fundraising_custom-button">
       <div class="fundraising_button-left-element">
         <svg
-          class="partnership_button-left-element__svg"
+          class="fundraising_button-left-element__svg"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
@@ -37,7 +37,9 @@
     </button>
 
     <button class="fundraising_custom-button">
-      <div class="fundraising_button-left-element">
+      <div
+        class="fundraising_button-left-element fundraising_button-left-element__second"
+      >
         <svg
           class="fundraising_button-left-element__svg"
           xmlns="http://www.w3.org/2000/svg"
