--- a/src/partials/partnership.html
+++ b/src/partials/partnership.html
@@ -35,7 +35,9 @@
     </button>
 
     <button class="partnership_custom-button">
-      <div class="partnership_button-left-element">
+      <div
+        class="partnership_button-left-element partnership_button-left-element__second"
+      >
         <svg
           class="partnership_button-left-element__svg"
           xmlns="http://www.w3.org/2000/svg"
