--- a/src/partials/fundraising.html
+++ b/src/partials/fundraising.html
@@ -4,6 +4,23 @@
   </h2>
   <div class="fundraising_flex-box">
     <button type="button" class="fundraising_button-gathering">Зібрано</button>
+    <div class="like-container">
+      <button class="like-button">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          viewBox="0 0 20 20"
+          fill="none"
+        >
+          <path
+            d="M18.75 7.1294C18.75 12.5981 10.6414 17.0247 10.2961 17.2075C10.2051 17.2565 10.1033 17.2821 10 17.2821C9.89665 17.2821 9.79492 17.2565 9.70391 17.2075C9.35859 17.0247 1.25 12.5981 1.25 7.1294C1.25145 5.8452 1.76223 4.61401 2.6703 3.70595C3.57837 2.79788 4.80955 2.28709 6.09375 2.28564C7.70703 2.28564 9.11953 2.97939 10 4.15205C10.8805 2.97939 12.293 2.28564 13.9062 2.28564C15.1904 2.28709 16.4216 2.79788 17.3297 3.70595C18.2378 4.61401 18.7486 5.8452 18.75 7.1294Z"
+            fill="#251ADD"
+          />
+        </svg>
+      </button>
+      <span class="like-count">0</span>
+    </div>
   </div>
 
   <div class="fundraising_flex-box-button">
