--- a/src/sass/components/_fundraising.scss
+++ b/src/sass/components/_fundraising.scss
@@ -39,6 +39,13 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 20px;
+  }
 }
 
 .fundraising_custom-button {
@@ -92,4 +99,9 @@
   font-style: normal;
   font-weight: 500;
   line-height: 120%;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    font-weight: 600;
+  }
 }
