--- a/src/partials/fundraising.html
+++ b/src/partials/fundraising.html
@@ -1,7 +1,13 @@
 <section class="fundraising_section">
-  <h2 class="fundraising_title">
-    Доставили близько 400 автівок військовослужбовцям
-  </h2>
+  <div>
+    <h2 class="fundraising_title-first">
+      Доставили близько 400 автівок військовослужбовцям
+    </h2>
+    <h2 class="fundraising_title-second">
+      Як живуть люди у самому зруйнованому районі Харкова
+    </h2>
+  </div>
+
   <div class="fundraising_flex-box">
     <button type="button" class="fundraising_button-gathering">Зібрано</button>
     <div class="fundraising_like-container">
