--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,9 +11,10 @@
 
 // // components
 
-// @import "./components/image-swiper";
+@import './components/image-swiper';
 @import './components/fundraising';
 @import './components/description';
-// @import "./components/reviews";
+@import './components/reviews';
 // @import "./components/stories";
 @import './components/partnership';
+@import './components/flex-conteiner';
