--- a/src/partials/image-swiper.html
+++ b/src/partials/image-swiper.html
@@ -1,169 +1,46 @@
-<div class="slider__container">
-  <!-- slider -->
-  <!-- <div class="slider">
-    <div class="slider__wrapper">
-      <div class="slider__items">
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-1-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-2-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-3-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-4-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-5-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-6-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-7-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-        <div class="slider__item">
-          <img
-            src="/examples/images/lighthouses/image-8-700x1000.jpg"
-            alt="..."
-            width="700"
-            height="1000"
-            loading="lazy"
-          />
-        </div>
-      </div>
-    </div>
-    <a
-      class="slider__control slider__control_prev"
-      href="#"
-      role="button"
-      data-slide="prev"
-    ></a>
-    <a
-      class="slider__control slider__control_next"
-      href="#"
-      role="button"
-      data-slide="next"
-    ></a>
-  </div> -->
-  <!-- thumbnails -->
-  <!-- <div class="slider__thumbnails">
-    <div class="slider__thumbnails-item" data-slide-to="0">
-      <img
-        src="/examples/images/lighthouses/image-1-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
-    <div class="slider__thumbnails-item" data-slide-to="1">
-      <img
-        src="/examples/images/lighthouses/image-2-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
-    <div class="slider__thumbnails-item" data-slide-to="2">
-      <img
-        src="/examples/images/lighthouses/image-3-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
-    <div class="slider__thumbnails-item" data-slide-to="3">
-      <img
-        src="/examples/images/lighthouses/image-4-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
-    <div class="slider__thumbnails-item" data-slide-to="4">
-      <img
-        src="/examples/images/lighthouses/image-5-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
-    <div class="slider__thumbnails-item" data-slide-to="5">
-      <img
-        src="/examples/images/lighthouses/image-6-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
-    <div class="slider__thumbnails-item" data-slide-to="6">
-      <img
-        src="/examples/images/lighthouses/image-7-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
-    <div class="slider__thumbnails-item" data-slide-to="7">
-      <img
-        src="/examples/images/lighthouses/image-8-100x143.jpg"
-        alt="..."
-        width="100"
-        height="143"
-        loading="lazy"
-      />
-    </div>
+<section class="image-swiper_section">
+  <div class="image-swiper_large-image-container">
+    <picture >
+                <!-- desktop -->
+                <source
+                  media="(min-width:1440px)"
+                  srcset="./images/Rectangle.desktop.jpg 1x, ./images/Rectangle.desktop@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <!-- tablet -->
+                <source
+                  media="(min-width:768px)"
+                  srcset="./images/Rectangle.tablet.jpg 1x, ./images/Rectangle.tablet@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <!-- phone -->
+                <source
+                  media="(max-width:767px)"
+                  srcset="./images/Rectangle.mobile.jpg 1x, ./images/Rectangle.mobile@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <img
+                class="image-swiper_large-image"
+                  src="./images/Rectangle.mobile.jpg"
+                  alt="фото будинків"
+                  loading="lazy"
+                />
+              </picture>
+              <svg
+          class="image-swiper_navigation__svg"
+          xmlns="http://www.w3.org/2000/svg"
+          width="31"
+          height="8"
+          viewBox="0 0 31 8"
+          fill="none"
+        >
+<path fill-rule="evenodd" clip-rule="evenodd" d="M26.5772 7.80047C26.8287 8.06316 27.2403 8.06696 27.4964 7.80897L30.8055 4.47563C30.9299 4.35028 31 4.17889 31 4C31 3.82111 30.9299 3.64972 30.8055 3.52437L27.4964 0.191034C27.2403 -0.0669594 26.8287 -0.0631561 26.5772 0.199528C26.3256 0.462213 26.3293 0.884305 26.5854 1.1423L28.7605 3.33333L18.65 3.33333C18.291 3.33333 18 3.63181 18 4C18 4.36819 18.291 4.66667 18.65 4.66667L28.7605 4.66667L26.5854 6.8577C26.3293 7.11569 26.3256 7.53779 26.5772 7.80047Z" fill="#2C2C2C" id="leftArrow"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M4.42283 7.80047C4.17129 8.06316 3.75975 8.06696 3.50363 7.80897L0.194539 4.47563C0.0700989 4.35028 0 4.17889 0 4C0 3.82111 0.0700989 3.64972 0.194539 3.52437L3.50363 0.191034C3.75975 -0.0669594 4.17129 -0.0631561 4.42283 0.199528C4.67438 0.462213 4.67067 0.884305 4.41455 1.1423L2.23945 3.33333L12.35 3.33333C12.709 3.33333 13 3.63181 13 4C13 4.36819 12.709 4.66667 12.35 4.66667L2.23945 4.66667L4.41455 6.8577C4.67067 7.11569 4.67438 7.53779 4.42283 7.80047Z" fill="#2C2C2C" id="rightArrow"/>
+        </svg>
+  <div class="image-swiper_gallery">
+    <img src="./images/Rectangle.mobile.jpg" alt="фото будинків" class="thumbnail" data-large="./images/Rectangle.mobile.jpg">
+    <img src="./images/image.1.jpg" alt="Image 2" class="thumbnail" data-large="./images/large1.jpg">
+    <img src="./images/image.2.jpg" alt="Image 3" class="thumbnail" data-large="./images/large2.jpg">
+    <img src="./images/image.3.jpg" alt="Image 4" class="thumbnail" data-large="./images/large3.jpg">
   </div>
-</div> -->
-</div>
+</section>
