--- a/src/partials/image-swiper.html
+++ b/src/partials/image-swiper.html
@@ -1,24 +1,24 @@
 <section class="image-swiper_section">
   <div class="image-swiper_large-image-container">
-    <picture >
+    <picture>
                 <!-- desktop -->
-                <source
+                <!-- <source
                   media="(min-width:1440px)"
                   srcset="./images/Rectangle.desktop.jpg 1x, ./images/Rectangle.desktop@2x.jpg 2x"
                   type="image/jpg"
-                />
+                /> -->
                 <!-- tablet -->
-                <source
+                <!-- <source
                   media="(min-width:768px)"
                   srcset="./images/Rectangle.tablet.jpg 1x, ./images/Rectangle.tablet@2x.jpg 2x"
                   type="image/jpg"
-                />
+                /> -->
                 <!-- phone -->
-                <source
+                <!-- <source
                   media="(max-width:767px)"
                   srcset="./images/Rectangle.mobile.jpg 1x, ./images/Rectangle.mobile@2x.jpg 2x"
                   type="image/jpg"
-                />
+                /> -->
                 <img
                 class="image-swiper_large-image"
                   src="./images/Rectangle.mobile.jpg"
@@ -39,8 +39,8 @@
         </svg>
   <div class="image-swiper_gallery">
     <img src="./images/Rectangle.mobile.jpg" alt="фото будинків" class="thumbnail" data-large="./images/Rectangle.mobile.jpg">
-    <img src="./images/image.1.jpg" alt="Image 2" class="thumbnail" data-large="./images/large1.jpg">
-    <img src="./images/image.2.jpg" alt="Image 3" class="thumbnail" data-large="./images/large2.jpg">
-    <img src="./images/image.3.jpg" alt="Image 4" class="thumbnail" data-large="./images/large3.jpg">
+    <img src="./images/image1.jpg" alt="Image 2" class="thumbnail" data-large="./images/image1.jpg">
+    <img src="./images/image2.jpg" alt="Image 3" class="thumbnail" data-large="./images/image2.jpg">
+    <img src="./images/image3.jpg" alt="Image 4" class="thumbnail" data-large="./images/image3.jpg">
   </div>
 </section>
