--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,6 +15,6 @@
 @import './components/fundraising';
 @import './components/description';
 @import './components/reviews';
-// @import "./components/stories";
+@import './components/stories';
 @import './components/partnership';
 @import './components/flex-conteiner';
