--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,6 +4,7 @@
   --new-black: #000;
   --new-white: #fff;
   --new-secondary-grey-color-1: #2c2c2c;
+  --new-secondary-grey-color-3: #514f4f;
   --home-2-primary-color-1: #4b5354;
 
   --primari-bg-color: #fff;
