--- a/src/partials/fundraising.html
+++ b/src/partials/fundraising.html
@@ -42,13 +42,13 @@
       class="fundraising_input"
       type="range"
       min="0"
-      max=""
+      max="100"
       name="range"
       value="0"
       step="1"
     />
     <div class="fundraising_second-form-box">
-      <span id="rangeValue" class="fundraising_value">0₴</span>
+      <span id="rangeValue" class="fundraising_value">1000000₴</span>
       <p class="fundraising_value-cash">
         /<span id="valueMany">1000000</span>₴
       </p>
