--- a/src/partials/stories.html
+++ b/src/partials/stories.html
@@ -1,5 +1,5 @@
 <section class="stories_section">
-  <h2>Історії людей</h2>
+  <h2 class="stories_title">Історії людей</h2>
   <svg
     class="stories_navigation__svg"
     xmlns="http://www.w3.org/2000/svg"
@@ -24,6 +24,10 @@
     />
   </svg>
   <div class="stories_film-box">
+    <video class="stories_film-box__video">
+      <!-- <source src="" type="video/mp4" /> -->
+      Your browser does not support the video tag.
+    </video>
     <div class="stories_film-box__description">
       <h3 class="stories_film-box__title">Назва історії</h3>
       <p class="stories_film-box__text">
@@ -34,98 +38,108 @@
         consectetur. Sagittis arcu a ac elementum quam lobortis eu tellus non.
       </p>
     </div>
-    <div class="stories_button-box">
-      <button class="stories_custom-button">
-        <div class="stories_button-left-element">
-          <svg
-            class="stories_button-left-element__svg"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
+
+    <div class="stories_all-button-box">
+      <div class="stories_button-box">
+        <button class="stories_custom-button">
+          <div class="stories_button-left-element">
+            <svg
+              class="stories_button-left-element__svg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M7 17L17 7"
+                stroke="white"
+                stroke-width="1.25"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M7 7H17V17"
+                stroke="white"
+                stroke-width="1.25"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+          <span class="stories_button-text">Підтримати</span>
+        </button>
+        <button class="stories_custom-button">
+          <div
+            class="stories_button-left-element stories_button-left-element__second"
           >
-            <path
-              d="M7 17L17 7"
-              stroke="white"
-              stroke-width="1.25"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-            <path
-              d="M7 7H17V17"
-              stroke="white"
-              stroke-width="1.25"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
+            <svg
+              class="stories_button-left-element__svg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M7 17L17 7"
+                stroke="white"
+                stroke-width="1.25"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M7 7H17V17"
+                stroke="white"
+                stroke-width="1.25"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+          <span class="stories_button-text">Детальніше</span>
+        </button>
+      </div>
+
+      <div class="stories_like-message-box">
+        <div class="stories_like-box">
+          <button class="stories_like-button">
+            <svg
+              class="stories_like-button__svg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              fill="none"
+            >
+              <path
+                d="M18.75 7.1294C18.75 12.5981 10.6414 17.0247 10.2961 17.2075C10.2051 17.2565 10.1033 17.2821 10 17.2821C9.89665 17.2821 9.79492 17.2565 9.70391 17.2075C9.35859 17.0247 1.25 12.5981 1.25 7.1294C1.25145 5.8452 1.76223 4.61401 2.6703 3.70595C3.57837 2.79788 4.80955 2.28709 6.09375 2.28564C7.70703 2.28564 9.11953 2.97939 10 4.15205C10.8805 2.97939 12.293 2.28564 13.9062 2.28564C15.1904 2.28709 16.4216 2.79788 17.3297 3.70595C18.2378 4.61401 18.7486 5.8452 18.75 7.1294Z"
+                fill="#251ADD"
+              />
+            </svg>
+          </button>
+          <span class="stories_like-count">0</span>
         </div>
-        <span class="stories_button-text">Підтримати</span>
-      </button>
-      <button class="stories_custom-button">
-        <div class="stories_button-left-element">
-          <svg
-            class="stories_button-left-element__svg"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-          >
-            <path
-              d="M7 17L17 7"
-              stroke="white"
-              stroke-width="1.25"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-            <path
-              d="M7 7H17V17"
-              stroke="white"
-              stroke-width="1.25"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
+        <div class="stories_message-box">
+          <button class="stories_message-button">
+            <svg
+              class="stories_message-button__svg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="25"
+              height="25"
+              viewBox="0 0 25 25"
+              fill="none"
+            >
+              <path
+                d="M7.5 18.648V17.648H6.5H5.75C4.49489 17.648 3.5 16.6471 3.5 15.4405V7.05296C3.5 5.84631 4.49489 4.84546 5.75 4.84546H19.25C20.5051 4.84546 21.5 5.84631 21.5 7.05296V15.4405C21.5 16.6481 20.5054 17.648 19.25 17.648H13.5125H13.1834L12.9186 17.8434L7.9054 21.5443C7.85027 21.5849 7.7814 21.6023 7.71361 21.5926C7.64648 21.5831 7.58571 21.5478 7.54413 21.4943C7.51563 21.4561 7.50015 21.4097 7.5 21.362V18.648Z"
+                stroke="#251ADD"
+                stroke-width="2"
+              />
+            </svg>
+          </button>
+          <span class="stories_message-count">0</span>
         </div>
-        <span class="stories_button-text">Детальніше</span>
-      </button>
-    </div>
-    <div class="stories_like-box">
-      <button class="stories_like-button">
-        <svg
-          class="stories_like-button__svg"
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="20"
-          viewBox="0 0 20 20"
-          fill="none"
-        >
-          <path
-            d="M18.75 7.1294C18.75 12.5981 10.6414 17.0247 10.2961 17.2075C10.2051 17.2565 10.1033 17.2821 10 17.2821C9.89665 17.2821 9.79492 17.2565 9.70391 17.2075C9.35859 17.0247 1.25 12.5981 1.25 7.1294C1.25145 5.8452 1.76223 4.61401 2.6703 3.70595C3.57837 2.79788 4.80955 2.28709 6.09375 2.28564C7.70703 2.28564 9.11953 2.97939 10 4.15205C10.8805 2.97939 12.293 2.28564 13.9062 2.28564C15.1904 2.28709 16.4216 2.79788 17.3297 3.70595C18.2378 4.61401 18.7486 5.8452 18.75 7.1294Z"
-            fill="#251ADD"
-          />
-        </svg>
-      </button>
-      <span class="stories_like-count">0</span>
-      <button class="stories_message-button">
-        <svg
-          class="stories_message-button__svg"
-          xmlns="http://www.w3.org/2000/svg"
-          width="25"
-          height="25"
-          viewBox="0 0 25 25"
-          fill="none"
-        >
-          <path
-            d="M7.5 18.648V17.648H6.5H5.75C4.49489 17.648 3.5 16.6471 3.5 15.4405V7.05296C3.5 5.84631 4.49489 4.84546 5.75 4.84546H19.25C20.5051 4.84546 21.5 5.84631 21.5 7.05296V15.4405C21.5 16.6481 20.5054 17.648 19.25 17.648H13.5125H13.1834L12.9186 17.8434L7.9054 21.5443C7.85027 21.5849 7.7814 21.6023 7.71361 21.5926C7.64648 21.5831 7.58571 21.5478 7.54413 21.4943C7.51563 21.4561 7.50015 21.4097 7.5 21.362V18.648Z"
-            stroke="#251ADD"
-            stroke-width="2"
-          />
-        </svg>
-      </button>
-      <span class="stories_message-count">0</span>
+      </div>
     </div>
   </div>
 </section>
