--- a/src/sass/components/_fundraising.scss
+++ b/src/sass/components/_fundraising.scss
@@ -69,14 +69,12 @@
 }
 
 .fundraising_like-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   background: none;
-}
-
-.fundraising_like-button__svg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 0;
 }
 
 .fundraising_like-count {
@@ -115,12 +113,53 @@
   justify-content: space-between;
 }
 
+// .fundraising_input {
+//   margin-bottom: 10px;
+//   appearance: none;
+
+//   border-radius: 6px;
+//   background: var(--new-22);
+
+//   height: 5px;
+//   flex-shrink: 0;
+
+//   padding: 0;
+// }
+
+// .fundraising_input::-webkit-slider-runnable-track {
+//   height: 0;
+//   appearance: none;
+//   color: var(--new-22);
+//   margin-top: -1px;
+// }
+
 .fundraising_input {
   margin-bottom: 10px;
 
+  -webkit-appearance: none;
+  appearance: none;
   height: 5px;
+  padding: 0;
   border-radius: 6px;
   background: var(--new-22);
+}
+
+/* Стилі для не заповненого повзунка */
+.fundraising_input::-webkit-slider-runnable-track {
+  height: 5px;
+  border-radius: 6px;
+  color: var(--new-secondary-grey-color-1);
+}
+
+/* Стилі для бігунка (thumb) */
+.fundraising_input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 5px;
+  height: 5px;
+  background-color: #251add;
+  border-radius: 50%;
+  margin-top: 0px;
 }
 
 .fundraising_second-form-box {
